[gd_scene load_steps=9 format=3 uid="uid://d0v7sdj44dty8"]

[ext_resource type="Script" path="res://scripts/flame.gd" id="1_31diu"]
[ext_resource type="Texture2D" uid="uid://jneu1qniv27g" path="res://assets/sprites/oven_scene_sprites/flame_spritesheet.png" id="2_56scc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qwfd"]
atlas = ExtResource("2_56scc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtlan"]
atlas = ExtResource("2_56scc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi5ne"]
atlas = ExtResource("2_56scc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh4qo"]
atlas = ExtResource("2_56scc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f7kb3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qwfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtlan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi5ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh4qo")
}],
"loop": true,
"name": &"flame",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x0xyn"]
radius = 9.0
height = 24.0

[node name="Flame" type="Area2D"]
script = ExtResource("1_31diu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(135.864, 89.5)
scale = Vector2(1.6335, 1.15625)
sprite_frames = SubResource("SpriteFrames_f7kb3")
animation = &"flame"
frame_progress = 0.813028

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(136, 100)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x0xyn")

[node name="FlameTimer" type="Timer" parent="."]

[node name="HidePlayerTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlameTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HidePlayerTimer" to="." method="_on_hide_player_timer_timeout"]
